<resources>
    <string name="app_name">Covid19</string>
    <string name="confirmed">Confirmed</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="new_cases">New</string>
    <string name="covid19_chart">COVID-19 chart</string>
    <string name="covid19_chart_spannable">"COVID-19 App\ndeveloped by Rinat Khusainov"</string>
    <string name="history">History</string>
    <string name="network_error">Network error. Check your internet connection.</string>
    <string name="search">search</string>

    <string-array name="sort_items">
        <item>Confirmed</item>
        <item>Active</item>
        <item>Recovered</item>
        <item>Deaths</item>
    </string-array>

</resources>
