<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/country_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/country_background"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Country" />

    <TextView
        android:id="@+id/active_label"
        style="@style/TextLabelList"
        android:layout_marginStart="8dp"
        android:text="@string/active"
        app:layout_constraintRight_toLeftOf="@id/critical_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_text" />

    <TextView
        android:id="@+id/critical_label"
        style="@style/TextLabelList"
        android:text="@string/critical"
        app:layout_constraintBaseline_toBaselineOf="@+id/active_label"
        app:layout_constraintLeft_toRightOf="@id/active_label"
        app:layout_constraintRight_toLeftOf="@id/recovered_label" />

    <TextView
        android:id="@+id/recovered_label"
        style="@style/TextLabelList"
        android:text="@string/recovered"
        app:layout_constraintBaseline_toBaselineOf="@+id/active_label"
        app:layout_constraintLeft_toRightOf="@id/critical_label"
        app:layout_constraintRight_toLeftOf="@id/new_label" />

    <TextView
        android:id="@+id/new_label"
        style="@style/TextLabelList"
        android:text="@string/new_cases"
        app:layout_constraintBaseline_toBaselineOf="@+id/active_label"
        app:layout_constraintLeft_toRightOf="@id/recovered_label"
        app:layout_constraintRight_toLeftOf="@id/deaths_label" />

    <TextView
        android:id="@+id/deaths_label"
        style="@style/TextLabelList"
        android:layout_marginEnd="8dp"
        android:text="@string/deaths"
        app:layout_constraintBaseline_toBaselineOf="@+id/active_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/new_label" />


    <TextView
        android:id="@+id/active_text"
        style="@style/TextValueList"
        app:layout_constraintEnd_toEndOf="@+id/active_label"
        app:layout_constraintStart_toStartOf="@+id/active_label"
        app:layout_constraintTop_toBottomOf="@id/active_label"
        tools:text="100" />

    <TextView
        android:id="@+id/critical_text"
        style="@style/TextValueList"
        app:layout_constraintEnd_toEndOf="@+id/critical_label"
        app:layout_constraintStart_toStartOf="@+id/critical_label"
        app:layout_constraintTop_toBottomOf="@id/critical_label"
        tools:text="100" />

    <TextView
        android:id="@+id/recovered_text"
        style="@style/TextValueList"
        app:layout_constraintEnd_toEndOf="@+id/recovered_label"
        app:layout_constraintStart_toStartOf="@+id/recovered_label"
        app:layout_constraintTop_toBottomOf="@id/recovered_label"
        tools:text="100" />

    <TextView
        android:id="@+id/new_text"
        style="@style/TextValueList"
        app:layout_constraintEnd_toEndOf="@+id/new_label"
        app:layout_constraintStart_toStartOf="@+id/new_label"
        app:layout_constraintTop_toBottomOf="@id/new_label"
        tools:text="+100" />

    <TextView
        android:id="@+id/deaths_text"
        style="@style/TextValueList"
        app:layout_constraintEnd_toEndOf="@+id/deaths_label"
        app:layout_constraintStart_toStartOf="@+id/deaths_label"
        app:layout_constraintTop_toBottomOf="@id/deaths_label"
        tools:text="100" />

</androidx.constraintlayout.widget.ConstraintLayout>